src/test/wacc/invalid/semanticErr/scope/badParentScope.wacc
# Stuff that follows a child scope is not part of the parent!
# Thanks to Ollie Madine and Andrii Verveha

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = 5;
  begin
    begin
      free x
    end;
    int[] x = [1]
  end
end